# lerno

./: CHANGELOG.md  README.md  analysis_options.yaml  build_release.ps1  download_remaining_assets.py  generate_assets.py  pubspec.yaml  setup_hooks.ps1
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py
docs/: 01_Project_Overview.md  02_Project_Architecture.md  03_Tech_Stack.md  04_Project_Structure.md  05_Frontend_Architecture.md  06_Backend_Architecture.md  07_Database_Design.md  08_API_Design.md  09_Authentication_System.md  10_Navigation_Flow.md  11_UI_Design_System.md  12_Game_System.md  13_Quiz_Battle_System.md  14_Gamification_System.md  15_Profile_System.md  16_Offline_Architecture.md  17_Mock_Backend_System.md  18_Performance_Optimization.md  19_Security.md  20_Development_Guide.md  21_Build_Deployment.md  22_Project_Status.md  24_Social_Features.md  25_Learning_Path_System.md  26_Backend_Guide.md  README.md  architecture.md  asset_guidelines.md
lib/: main.dart
lib/data/: mock_data.dart
tools/assets/: audit_assets.dart  download_audio_avatars.py  download_avatars.py  download_kenney_sfx.py  (+6 more)
web/: .gitignore  index.html  manifest.json  package.json  pnpm-lock.yaml
(+211 files in other folders)
